<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/top_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/rectangle_two"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/signup_font_size"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container_info"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_info"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        android:layout_marginTop="-50dp"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="@dimen/corner_radius_dos"
        app:cardElevation="@dimen/elevation_card"
        app:layout_constraintTop_toBottomOf="@id/top_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:src="@drawable/icono"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default"/>

            <TextView
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default"
                android:textStyle="italic"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/container_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/container_info">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/horario"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/horario"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_materias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/container_classes">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/materias"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/materias"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_calif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/container_materias">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calificaciones"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/calif"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginHorizontal="@dimen/margin_default"
        app:layout_constraintTop_toBottomOf="@id/container_calif">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pago"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/Pago"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>