<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="146dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9"/>

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/rectangle_one"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.2"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default"
        android:elevation="@dimen/elevation"
        android:src="@drawable/logo_redanahuac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in_n"
        android:textColor="@color/a_orange"
        android:textSize="@dimen/signup_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gl_45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintTop_toBottomOf="@id/txt_sign_in">

        <LinearLayout
            android:id="@+id/user_edit"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:layout_gravity="center"
                android:paddingStart="@dimen/margin_default"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:hint="@string/txt_phone_email"
                android:textColorHint="@color/grey"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_edit">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/candado"
                android:layout_gravity="center"
                android:paddingStart="@dimen/margin_default"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:hint="@string/txt_password"
                android:textColorHint="@color/grey"
                android:background="@null"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in"
        android:backgroundTint="@color/a_orange"
        android:elevation="@dimen/elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_90"/>

</androidx.constraintlayout.widget.ConstraintLayout>